bash-completions hack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -955,7 +955,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
         if((NOT BASH_COMPLETION_FOUND) OR (NOT BASH_COMPLETION_PREFIX STREQUAL CMAKE_INSTALL_PREFIX))
             set(BASH_COMPLETION_COMPLETIONSDIR "${CONF_INST_DIR}/bash_completion.d")
             if(LINUX_DISTRIBUTION_IS_GENTOO AND CMAKE_INSTALL_PREFIX STREQUAL "/usr")
-                set(BASH_COMPLETION_COMPLETIONSDIR "/usr/share/bash-completion")
+                set(BASH_COMPLETION_COMPLETIONSDIR "$installdir/usr/share/bash-completion")
             endif()
         endif()
     endif()
