--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -613,7 +613,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     if(NOT BASH_COMPLETION_FOUND)
         set(BASH_COMPLETION_COMPLETIONSDIR "${CONF_INST_DIR}/bash_completion.d")
         if(LINUX_DISTRIBUTION_IS_GENTOO)
-            set(BASH_COMPLETION_COMPLETIONSDIR "/usr/share/bash-completion")
+            set(BASH_COMPLETION_COMPLETIONSDIR "$installdir/usr/share/bash-completion")
         endif()
     endif()
     install(DIRECTORY bash_completion.d/ DESTINATION ${BASH_COMPLETION_COMPLETIONSDIR})
